<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReportActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/application_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PersonalHealthMonitor.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PersonalHealthMonitor.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/report_local_date_text_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/report_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_report_local_date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/change_report_local_date_button" />

    <TextView
        android:id="@+id/report_local_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/report_local_date_text_view_label"
        app:layout_constraintStart_toEndOf="@+id/report_local_date_text_view_label"
        app:layout_constraintTop_toTopOf="@+id/report_local_date_text_view_label" />

    <Button
        android:id="@+id/change_report_local_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/choose_date"
        app:layout_constraintStart_toEndOf="@+id/report_local_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/application_bar_layout" />

    <EditText
        android:id="@+id/report_notes_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:hint="@string/notes"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_report_local_date_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/health_parameters_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_margin"
        app:layout_constraintBottom_toTopOf="@+id/save_health_parameter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_notes_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/create_health_parameter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/create_health_parameter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_health_parameter_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_health_parameter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/save_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/create_health_parameter_button" />

</androidx.constraintlayout.widget.ConstraintLayout>